# systemd

./: .gitignore  Makefile-man.am  Makefile.am  README  TODO  autogen.sh  configure.ac  meson.build  meson_options.txt
debian/: 50-eos.preset  changelog  control  rules  systemd-boot.install  systemd-container.install  systemd-coredump.install  systemd-journal-remote.install  systemd-oomd.install  systemd.install  systemd.links  systemd.postinst  systemd.postrm  systemd.preinst  systemd.triggers  udev-udeb.install  udev.install  udev.postinst  udev.triggers
hwdb/: 60-evdev.hwdb  60-keyboard.hwdb  60-sensor.hwdb  parse_hwdb.py
hwdb.d/: 60-keyboard.hwdb
man/: journald.conf.xml  meson.build  sd-daemon.xml  sd-login.xml  systemctl.xml  systemd-notify.xml  systemd-system.conf.xml  systemd.exec.xml  systemd.socket.xml  systemd.special.xml  systemd.swap.xml  systemd.unit.xml  timesyncd.conf.xml  udev.xml
po/: POTFILES.in  POTFILES.skip
presets/: 90-systemd.preset
rules/: 50-pandectas.rules  50-udev-default.rules.in  60-persistent-storage.rules  78-sound-card.rules  82-bluetooth.rules
rules.d/: 50-udev-default.rules.in  60-persistent-storage.rules  60-persistent-storage.rules.in  99-systemd.rules.in
src/readahead/: meson.build  readahead-analyze.c  readahead-collect.c  readahead-common.c  readahead-common.h  readahead-replay.c  readahead.c  test-ssd.c
sysctl.d/: 50-coredump.conf.in  meson.build
system-preset/: 90-systemd.preset
test/: networkd-test.py  udev-test.pl
tmpfiles.d/: static-nodes-permissions.conf.in  systemd.conf  tmp.conf
units/: .gitignore  (+37 more)
(+142 files in other folders)
